--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,7 @@
 /nbproject/private/
 /nbproject/
 .idea/
+###> symfony/phpunit-bridge ###
+.phpunit
+/phpunit.xml
+###< symfony/phpunit-bridge ###
