--- a/.env.dist
+++ b/.env.dist
@@ -2,6 +2,10 @@
 # Copy this file to .env file for development, create environment variables when deploying to production
 # https://symfony.com/doc/current/best_practices/configuration.html#infrastructure-related-configuration
 
+### CUSTOM VARS
+SLACK_WEBHOOK_ENDPOINT=https://hooks.slack.com
+### END CUSTOM VARS
+
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=ac90ef70a63de739cfcee4542bf882e8
