--- a/config/packages/nexy_slack.yaml
+++ b/config/packages/nexy_slack.yaml
@@ -1,3 +1,3 @@
 nexy_slack:
     # The Slack API Incoming WebHooks URL.
-    endpoint: https://hooks.slack.com/services/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
+    endpoint: '%env(SLACK_WEBHOOK_ENDPOINT)%'
